--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
